--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,3 +57,12 @@ canvas {
     background-color: grey;
     border-radius: 10%;
   }
+.hitchcockBack {
+  height: 700px;
+  width: 600px;
+  /* los siguientes valores son independientes del tamaño del círculo */
+  background-repeat: no-repeat;
+  background-position: 50%;
+  border-radius: 50%;
+  background-size: 100% auto;
+}
