--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,21 +3,21 @@ html, body {
   width: 100%;
   margin: 0;
   padding: 0;
-  background: burlywood;
+  background: rgb(228, 210, 187);
 }
 
 h1 {
   font-size: 100px;
   font-weight: 600;
   font-family: 'Roboto', sans-serif;
-  color: #b393d3;
+  color: rgba(129,230,217,1);
   text-transform: uppercase;
-  text-shadow: 1px 1px 0px #957dad,
-               1px 2px 0px #957dad,
-               1px 3px 0px #957dad,
-               1px 4px 0px #957dad,
-               1px 5px 0px #957dad,
-               1px 6px 0px #957dad,
+  text-shadow: 1px 1px 0px #cf6d18,
+               1px 2px 0px #cf6d18,
+               1px 3px 0px #cf6d18,
+               1px 4px 0px #cf6d18,
+               1px 5px 0px #cf6d18,
+               1px 6px 0px #cf6d18,
                1px 10px 5px rgba(16, 16, 16, 0.5),
                1px 15px 10px rgba(16, 16, 16, 0.4),
                1px 20px 30px rgba(16, 16, 16, 0.3),
@@ -42,21 +42,11 @@ h1 {
   flex: 1;
 }
 canvas {
-    border: 1px dotted burlywood ;
+    border: none ;
     margin: 0 auto;
     display: block;
   }
 
-  #start-btn {
-    width: 100px;
-    height: 50px;
-    position: relative;
-    text-align: center;
-    color: white;
-    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
-    background-color: grey;
-    border-radius: 10%;
-  }
 .hitchcockBack {
   height: 700px;
   width: 600px;
@@ -65,4 +55,82 @@ canvas {
   background-position: 50%;
   border-radius: 50%;
   background-size: 100% auto;
+}
+
+
+
+#start-btn {
+  min-width: 300px;
+  min-height: 60px;
+  font-family: 'Nunito', sans-serif;
+  font-size: 22px;
+  text-transform: uppercase;
+  letter-spacing: 1.3px;
+  font-weight: 700;
+  color: #313133;
+  background: #4FD1C5;
+background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
+  border: none;
+  border-radius: 1000px;
+  box-shadow: 12px 12px 24px rgba(79,209,197,.64);
+  transition: all 0.3s ease-in-out 0s;
+  cursor: pointer;
+  outline: none;
+  position: relative;
+  padding: 10px;
+  }
+
+button::before {
+content: '';
+  border-radius: 1000px;
+  min-width: calc(300px + 12px);
+  min-height: calc(60px + 12px);
+  border: 6px solid #00FFCB;
+  box-shadow: 0 0 60px rgba(0,255,203,.64);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: all .3s ease-in-out 0s;
+}
+
+.button:hover, .button:focus {
+  color: #313133;
+  transform: translateY(-6px);
+}
+
+button:hover::before, button:focus::before {
+  opacity: 1;
+}
+
+button::after {
+  content: '';
+  width: 30px; height: 30px;
+  border-radius: 100%;
+  border: 6px solid #00FFCB;
+  position: absolute;
+  z-index: -1;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: ring 1.5s infinite;
+}
+
+button:hover::after, button:focus::after {
+  animation: none;
+  display: none;
+}
+
+@keyframes ring {
+  0% {
+    width: 30px;
+    height: 30px;
+    opacity: 1;
+  }
+  100% {
+    width: 300px;
+    height: 300px;
+    opacity: 0;
+  }
 }
