--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   padding: 0;
   background: rgb(228, 210, 187);
+  background-image: url(/assets/images/introbackground.jpeg);
 }
 
 h1 {
@@ -23,6 +24,7 @@ h3 {
   font-family:Helvetica Neue, Helvetica, Arial, sans-serif;
   font-size: 15px;
   font-weight: normal;
+  padding-top: 220px;
 }
  p {
   font-family:Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -85,7 +87,7 @@ canvas {
   outline: none;
   position: relative;
   padding: 10px;
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 button::before {
